Give more informative error when setting property to incorrect type

https://bugzilla.gnome.org/show_bug.cgi?id=695420